# geopm

./: .clang-format  .codespellrc  .gdbinit.geopm  .gdbinit.geopm.local  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis_obs.sh  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  COPYING-TPP  ChangeLog  ChangeLog.md  ChangeLog.update  GTEST_TESTS  LICENSE-BSD-3-Clause  MANIFEST  Makefile.am  README  README.md  TODO  autogen.sh  build.sh  check-precommit-license  client_attach.sh  configure.ac  debug.sh  docs  dox2man.sh  doxygen_update.sh  environment-default.json  gen_man.sh  geopm-ohpc.spec  geopm-ohpc.spec.in  geopm-runtime.spec.in  (+21 more)
docs/: .gitignore  Makefile  README.md  doxygen_update.sh  geopm-doc.spec.in  geopm-docs.spec.in  make_deb.sh  make_rpm.sh  pyproject.toml  requirements.txt
docs/debian/: changelog  changelog.in  control  copyright  geopm-runtime-docs.manpages  geopm-service-docs.bash-completion  geopm-service-docs.manpages  libgeopm-docs.manpages  libgeopmd-docs.manpages  python3-geopmdpy-docs.manpages  python3-geopmpy-docs.bash-completion  python3-geopmpy-docs.manpages  rules
docs/dox/: Doxyfile.in  blurb.md
docs/json_data/: msr_data_arch.json  msr_data_knl.json  msr_data_snb.json  sysfs_attributes_cpufreq.json  sysfs_attributes_drm.json
docs/json_schemas/: active_sessions.schema.json  const_config_io.schema.json  geopmagent_policy.schema.json  geopmbench_config.schema.json  msrs.schema.json  sysfs_attributes.schema.json
docs/shell_completion/: Makefile.mk  README.md  geopmlaunch.bash  geopmread.bash  geopmwrite.bash
docs/source/: GEOPM_CXX_MAN_Agent.3.rst  GEOPM_CXX_MAN_CPUActivityAgent.3.rst  GEOPM_CXX_MAN_Comm.3.rst  GEOPM_CXX_MAN_CpuinfoIOGroup.3.rst  GEOPM_CXX_MAN_Daemon.3.rst  GEOPM_CXX_MAN_GPUActivityAgent.3.rst  GEOPM_CXX_MAN_Helper.3.rst  GEOPM_CXX_MAN_IOGroup.3.rst  GEOPM_CXX_MAN_MPIComm.3.rst  GEOPM_CXX_MAN_MonitorAgent.3.rst  GEOPM_CXX_MAN_PlatformIO.3.rst  GEOPM_CXX_MAN_PlatformTopo.3.rst  GEOPM_CXX_MAN_PowerBalancer.3.rst  GEOPM_CXX_MAN_PowerBalancerAgent.3.rst  GEOPM_CXX_MAN_PowerGovernor.3.rst  GEOPM_CXX_MAN_ProfileIOGroup.3.rst  GEOPM_CXX_MAN_TimeIOGroup.3.rst  admin.rst  build.rst  client.rst  conf.py  devel.rst  docu.rst  geopm.7.rst  geopm::Agent.3.rst  geopm::Agg.3.rst  geopm::CNLIOGroup.3.rst  geopm::CPUActivityAgent.3.rst  geopm::CircularBuffer.3.rst  geopm::Comm.3.rst  geopm::CpuinfoIOGroup.3.rst  geopm::Daemon.3.rst  geopm::Endpoint.3.rst  geopm::Exception.3.rst  geopm::GPUActivityAgent.3.rst  geopm::Helper.3.rst  geopm::IOGroup.3.rst  geopm::MPIComm.3.rst  geopm::MSRIO.3.rst  geopm::MSRIOGroup.3.rst  (+73 more)
geopmdpy/: .gitignore  MANIFEST.in  README.md  build_libgeopmd_wrapper.py  geopmdpy.spec  geopmdpy.spec.in  geopmexporter.service  make_deb.sh  make_rpm.sh  make_sdist.py  make_sdist.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
geopmdpy/debian/: changelog  changelog.in  control  copyright  libgeopmd-dev.dirs  rules
geopmdpy/geopmdpy/: __init__.py  __main__.py  access.py  dbus_xml.py  error.py  exporter.py  gffi.py  grpc_service.py  loop.py  pio.py  restorable_file_writer.py  schemas.py  service.py  session.py  shmem.py  stats.py  system_files.py  topo.py  version.py
geopmdpy/geopmdpy_test/: TestAccessLists.py  TestActiveSessions.py  TestDBusXML.py  TestMSRDataFiles.py  TestRequestQueue.py  TestRestorableFileWriter.py  TestSecureFiles.py  TestSession.py  TestTimedLoop.py  TestTopo.py  TestWriteLock.py  __main__.py
geopmdpy/test/: Makefile.mk  TestAccess.py  TestAccessLists.py  TestActiveSessions.py  TestCollector.py  TestConfigPath.py  TestDBusXML.py  TestError.py  TestMSRDataFiles.py  TestPIO.py  TestPlatformService.py  TestPrometheusExporter.py  TestRequestQueue.py  TestRestorableFileWriter.py  TestSecureFiles.py  TestSession.py  TestTimedLoop.py  TestTopo.py  TestWriteLock.py  __main__.py  geopmdpy_test.sh
geopmpy/: .gitignore  MANIFEST.in  Makefile.mk  README.md  build_libgeopm_wrapper.py  geopmlaunch  geopmpy.spec.in  geopmrt.sh  make_deb.sh  make_rpm.sh  make_sdist.py  make_sdist.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
geopmpy/debian/: changelog  control  copyright  rules
geopmpy/geopmpy/: __init__.py  agent.py  endpoint.py  hash.py  init_db.py  io.py  launcher.py  policy_store.py  runtime.py  runtime_logger.py  schema.sql  version.py  version.py.in
geopmpy/shell_completion/: Makefile.mk  README.md  geopmlaunch.bash
geopmpy/test/: TestAffinity.py  TestAgent.py  TestEndpoint.py  TestHash.py  TestIO.py  TestLauncher.py  TestPolicyStore.py  TestPolicyStoreIntegration.py  __init__.py  __main__.py  geopmpy_test.sh.in  test_io_experiment.report
integration/: .gitignore  Makefile.am  Makefile.mk  README.md  __init__.py  autogen.sh  build_env.sh  configure.ac  m4  requirements.txt  run_env.sh
integration/apps/: Makefile.mk  README.md  apps.py  build_func.sh  geopmbench.py
integration/config/: README.md  australis_env.sh  build.sh  build_env.sh  default_env.sh  dudley_env.sh  endeavor_env.sh  gnu_env.sh  mcfly_env.sh  run_env.sh  smng_env.sh  theta_env.sh
integration/experiment/: Makefile.mk  README.md  common_args.py  cpu_ca_characterization.py  gen_pbs.sh  gen_slurm.sh  gpu_ca_characterization.py  launch_util.py  machine.py  plotting.py  (+6 more)
libgeopm/: .gitignore  Makefile.am  README.md  README.rst  autogen.sh  configure.ac  doxygen_update.sh  geopm-runtime.spec.in  geopm_runtime.proto
libgeopmd/: .gitignore  COPYING-TPP  Makefile.am  README.md  README.rst  configure.ac  doxygen_update.sh  geopm-service.spec.in  geopm.service  geopm_service.proto  json_data  libgeopmd.spec.in  protoc-gen.sh
service/: .gitignore  Dockerfile  MANIFEST.in  Makefile.am  README.md  README.rst  TODO.md  autogen.sh  configure.ac  geopm-client-seccomp.json  geopm-dbus-client.cpp  geopm-server-seccomp.json  geopm-service.spec.in  geopm.service  geopm_service.proto  geopmaccess  geopmd  geopmsession  io.github.geopm.conf  io.github.geopm.xml  k8-manifest.yaml  protoc-gen.sh  pyproject.toml  pyproject.toml.in  requirements.txt  setup.py
(+3644 files in other folders)
